# ittraker

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: backupmanager.cpp  backupmanager.h  clientdialog.cpp  clientdialog.h  clientprofiledialog.cpp  clientprofiledialog.h  clientspage.cpp  clientspage.h  csvexporter.cpp  csvexporter.h  dashboard.cpp  dashboard.h  database.cpp  database.h  jobdialog.cpp  jobdialog.h  loginscreen.cpp  loginscreen.h  main.cpp  mainwindow.cpp  mainwindow.h  paginationwidget.cpp  paginationwidget.h  pdfexporter.cpp  pdfexporter.h  session.h  style.h  usermanagerdialog.cpp  usermanagerdialog.h  worklogpage.cpp  worklogpage.h
